--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "authors": [
                 {
                         "name": "Naomi Guyer",
-                        "email": "naomi@silverstripe.com"
+                        "email": "adrexia@gmail.com"
                 }
         ],
         "require":
